--- a/example/public/index.html
+++ b/example/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>D&D Character Sheets</title>
+    <title>Fiches personnage D&D</title>
   </head>
 
   <body>
